Fixed bug in webkit/Safari (hopefully) where photo stretched in mobile. Fixed font not inheriting in WebKit.

--- a/src/app/contact/contact.component.css
+++ b/src/app/contact/contact.component.css
@@ -49,6 +49,7 @@ input.ng-invalid.ng-touched, textarea.ng-invalid.ng-touched {
     font-weight: bold;
     padding: 0.5em;
     cursor: pointer;
+    font-family: inherit;
 }
 
 .submit:hover {
